# espresso

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  README.md
crates/backend/: Cargo.toml
crates/backend/src/: ai.rs  analysis.rs  canonical.rs  delta_policy.rs  main.rs  models.rs  pdf.rs  routes.rs  store.rs
docs/: product-fixture-annotation.md
frontend/: index.html  package-lock.json  package.json  tsconfig.debug.json  vite.config.ts
frontend/fixtures/: annotation-baseline.json  annotation-debug.json  annotation-hyphenation.json  annotation-multiline.json  annotation-real-pdf-dense.json  annotation-real-pdf.json
frontend/src/: App.tsx  PdfDeltaReader.tsx  annotationDebug.ts  annotationDiagnostics.ts  api.ts  styles.css  types.ts
frontend/src/debug/: annotationCli.ts  annotationDiagnostics.test.ts  annotationFixture.ts
resource/: README.md
resource/product-fixtures/annotation-smoke/: README.md  baseline.template.json  candidates.json  candidates.md  fixture.json  gold_labels.template.json
resource/product-fixtures/beginner-retrieval/: README.md  baseline.json  fixture.json  gold_labels.json
resource/product-fixtures/experienced-retrieval/: README.md  (+6 more)
resource/product-fixtures/experienced-retrieval-hard/: README.md  baseline.json  fixture.json  gold_labels.json
resource/product-fixtures/experienced-retrieval-novelty-override/: README.md  baseline.json  fixture.json  gold_labels.json
tools/: generate-novelty-override-fixture.mjs
tools/pdfjs-extractor/: canonical.mjs  canonical.test.mjs  extract.mjs  package.json
(+1 files in other folders)
